# Cosmology-Simulator

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CONTRIBUTING.md  README.md  RELEASE_NOTES.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
bench/: README.md  bench_active_kernel_compact_vs_full.cpp  bench_amr_regrid_sync.cpp  bench_analysis_diagnostics_overhead.cpp  bench_black_hole_agn_sparse_update.cpp  bench_config_parser.cpp  bench_cooling_heating_source.cpp  bench_docs_reference_scan.cpp  bench_fof_grouping.cpp  bench_hydro_face_sweep.cpp  bench_ic_reader_streaming.cpp  bench_layout_smoke.cpp  bench_memory_accounting_overhead.cpp  bench_mode_dispatch.cpp  bench_parallel_decomposition_exchange.cpp  bench_pm_gpu_transfer.cpp  bench_pm_only_scaling_mpi.cpp  bench_pm_solver.cpp  bench_profiling_overhead.cpp  bench_restart_checkpoint_latency.cpp  bench_scheduler_overhead.cpp  bench_simulation_state_resize.cpp  bench_snapshot_hdf5_io.cpp  bench_soa_storage.cpp  bench_species_hot_cold_access.cpp  bench_star_formation_spawn.cpp  bench_stellar_evolution_bookkeeping.cpp  bench_stellar_feedback_deposition.cpp  bench_time_bin_scheduler.cpp  bench_tracer_update.cpp  bench_tree_gravity.cpp  bench_tree_only_scaling_mpi.cpp  bench_tree_pm_coupling.cpp  bench_tree_pm_force_error_map.cpp  bench_units_cosmology_smoke.cpp  bench_validation_ladder.cpp
bench/amr/: bench_amr_regrid_kernel.cpp
bench/baselines/: benchmark_sizes_v1.txt
bench/gravity/: bench_gravity_kernels.cpp
bench/hydro/: bench_hydro_kernels.cpp
bench/io/: bench_io_restart_kernel.cpp
bench/mini/: bench_mini_run_pipeline.cpp  bench_reference_workflow.cpp
bench/python/: bench_snapshot_access.py
bench/reporting/: bench_report.hpp
cmake/: FindFFTW3.cmake  README.md  cosmosim_feature_summary.cmake  cosmosim_find_fftw.cmake
cmake/templates/: build_config.hpp.in
configs/: cooling_relaxation.param.txt  cosmo_cube.param.txt  isolated_cluster.param.txt  isolated_galaxy.param.txt  minimal_cosmosim.param.txt  reference_workflow.param.txt  zoom_in.param.txt
configs/release/: release_smoke_cosmo_cube.param.txt  release_smoke_isolated_galaxy.param.txt  release_smoke_zoom_in.param.txt
configs/validation_phase3/: phase3_cosmo_box_ps_high.param.txt  phase3_cosmo_box_ps_low.param.txt  phase3_zoom_validation.param.txt
docs/: architecture.md  black_hole_agn.md  build_instructions.md  ci_regression_reproducibility.md  code_review.md  configuration.md  cooling_heating.md  developer_file_placement.md  gpu_enablement_strategy.md  gravity_production_readiness.md  halo_subhalo_merger_tree_workflow.md  hierarchical_timestepping_audit_2026-04-06.md  hydro_core_solver.md  ic_reader_compatibility.md  output_schema.md  parallel_distributed_memory_contracts.md  pm_gravity_solver.md  power_spectrum_diagnostics.md  profiling.md  python_bindings_analysis.md  reference_workflow.md  repair_closeout_report.md  repair_open_issues.md  repair_state_recap.md  restart_checkpointing.md  snapshot_hdf5_io.md  star_formation.md  state_model_memory_layout.md  stellar_evolution.md  time_integration.md  tree_gravity_solver.md  tree_pm_coupling.md  treepm_phase1_closeout.md  treepm_phase2_closeout.md  treepm_phase2_distributed_contract.md  treepm_phase3_closeout.md  treepm_phase3_contract.md  units_cosmology_provenance.md  validation_ladder.md  validation_phase3_campaign.md  (+1 more)
docs/architecture/: adr_runtime_truth_ownership.md  agent_task_interface.md  amr_hydro_subcycling_and_flux_registers.md  amr_temporal_ghost_interpolation.md  decision_log.md  developer_workflow_contract.md  distributed_ic_ingestion.md  gas_cell_identity_map_rfc.md  h1_hydro_closeout_audit.md  h2_gas_cell_identity_closeout_audit.md  h2_gas_cell_identity_migration_plan.md  h2_gas_cell_identity_repair_acceptance.md  h2_repair_test_verdict.md  h3_amr_hydro_closeout_audit.md  h3_amr_hydro_coupling_plan.md  h3_amr_hydro_production_closeout.md  hydro_h1_patch_plan.md  mpi_hardening_status.md  overview.md  runtime_truth_map.md  stage2_adversarial_timestep_review.md  stage2_timestep_hardening_closeout.md  stage2_timestep_ownership_audit.md  stage8_restart_output_closeout.md  stage8_restart_output_map.md
docs/releases/: initial_release_benchmark_summary.md  initial_release_scope.md  initial_release_validation_summary.md  known_issues.md  release_checklist.md
docs/repair/: CHUI_runtime_brain_prompt_result_adversarial_audit.mdZone.Identifier  chui_runtime_brain_exec_plan.md  chui_runtime_brain_prompt_result_adversarial_audit.md  chui_runtime_decomposition_goal_experiment.mdZone.Identifier  ci_fftw_non_cubic_and_mpi_topology_repair_2026_05_02.md  ci_validation_fftw_mpi_repair_2026_05_02.md  cmake_ci_hardening_2026_05_01.md  fftw_infrastructure_repair_2026_05_01.md  runtime_decomposition_exec_plan.md  runtime_decomposition_goal_spec.md  runtime_resource_capability_closeout.md  stage0_p05_p08_repair_notes.md  stage0_runtime_truth_freeze.md  stage1_p09_p10_repair_notes.md  stage1_runtime_transform_audit.md  stage4_orchestrator_audit_patch_map.md  stage5_config_contract_audit_map.md  stage6_6_5_6_8_repair_notes.md  stage6_change_map.md  stage6_closeout_audit.md  stage6_gap_closure_6_5_6_8_followup.md
docs/validation/: amr_hydro_convergence_campaign.md  amr_hydro_cross_code_protocol.md  amr_hydro_validation_ladder.md
include/cosmosim/: cosmosim.hpp
python/cosmosim/: __init__.py  analysis.py
release/: release_manifest_v1.json
resources/stellar_evolution/: default_v1.txt
scripts/: README.md
scripts/ci/: check_build_metadata.py  check_repo_hygiene.sh  enforce_infra_gates.sh  guard_feature_paths.sh  infrastructure_gates_manifest.tsv  run_preset_pipeline.sh  run_reproducibility_gate.sh  run_stage1_runtime_truth_gate.sh
scripts/validation/: collect_phase3_evidence.py
src/: python_bindings.cpp
src/amr/: amr_framework.cpp  amr_ghost_fill.cpp  amr_hydro_geometry.cpp  amr_hydro_orchestrator.cpp  (+1 more)
tests/: hydro_validation_helpers.hpp
tools/: README.md  convert_ic.py  convert_ic_manifest.py  run_amr_hydro_validation.py
(+341 files in other folders)
